--- a/src/pages/instruments/05_yplcs_uz.html
+++ b/src/pages/instruments/05_yplcs_uz.html
@@ -127,7 +127,7 @@
             <p class="italic text-red-500">Shaxsning tugʻilganlik toʻgʻrisidagi guvohnoma/shaxsini tasdiqlovchi hujjat/pasport raqamini kiriting. Agar odamda yoʻq boʻlsa, 0 (nol) ni kiriting.</p>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI1b. Ismi</div>
+                <div>PI1a. Ismi</div>
                 <div>
                     <input type="text" id="pi1a" name="pi1a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -286,14 +286,14 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI6b. Muassasa nomi</div>
+                <div>PI6n. Muassasa nomi</div>
                 <div>
                     <input type="text" id="pi6n" name="pi6n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI6c. Muassasa turi</div>
+                <div>PI6t. Muassasa turi</div>
                 <div>
                     <select id="pi6t" name="pi6t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
@@ -325,7 +325,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI8. Vasiylik qilish tizimida boʻlgan umumiy vaqt<strong class="underline">(oylarda)</strong></div>
+                <div>PI8. Vasiylik qilish tizimida boʻlgan umumiy vaqt <strong class="underline">(oylarda)</strong></div>
                 <div>
                     <input type="text" id="pi8" name="pi8" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -337,11 +337,11 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="pi10a-1" type="radio" value="1" name="pi9a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="pi10-1" class="ms-2 text-sm text-gray-900">1. Hamjamiyatiga, oila / qarindoshlar bilan</label>
+                        <label for="pi10-1" class="ms-2 text-sm text-gray-900">1. Mahallada, oila / qarindoshlar bilan</label>
                     </div>
                     <div class="flex items-center">
                         <input id="pi10a-2" type="radio" value="2" name="pi9a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="pi10-2" class="ms-2 text-sm text-gray-900">2. Hamjamiyatda, yakka o'zi</label>
+                        <label for="pi10-2" class="ms-2 text-sm text-gray-900">2. Mahallada, yakka o'zi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="pi10a-3" type="radio" value="3" name="pi9a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -360,7 +360,7 @@
 
             <p>b. Qonuniy yashash joyi-shahar / qishloq:</p>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div class="ml-4">в. Viloyat:</div>
+                <div class="ml-4">c. Viloyat:</div>
                 <div>
                     <select id="pi9c" name="pi9c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
@@ -369,7 +369,7 @@
             </div>
 
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div class="ml-4">д. Tuman:</div>
+                <div class="ml-4">d. Tuman:</div>
                 <div>
                     <select id="pi9d" name="pi9d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
@@ -396,7 +396,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="ml-4">Ф. Telefon raqami:</div>
+                <div class="ml-4">f. Telefon raqami:</div>
                 <div>
                     <input type="text" id="pi9f" name="pi9f" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -404,7 +404,7 @@
 
             <small class="block italic mt-6">Agar muassasada yashasa:</small>
             <div class="grid grid-cols-2 gap-4 items-center mt-2">
-                <div>г. Muassasa nomi</div>
+                <div>g. Muassasa nomi</div>
                 <div>
                     <input type="text" id="pi9g" name="pi9g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -1125,6 +1125,10 @@
                         <label for="he5_8" class="ms-2 text-sm text-gray-900">Boshqa kamchiliklar, iltimos, ko'rsating…</label>
                     </div>
                     <textarea id="he5_8_other" name="he5_8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
+                    <div class="flex items-center">
+                        <input id="he5_9" type="checkbox" value="1" name="he5_9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="he5_9" class="ms-2 text-sm text-gray-900">Yuqoridagilarning hech biri</label>
+                    </div>
                 </div>
             </div>
 
@@ -1364,7 +1368,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">Issiqlik25. So'nggi 12 oy ichida yoush odam o'ziga zarur bo'lgan yordamchi qurilmalar va jixoz sotib olish yoki almashtirish uchun biron bir yordam oldimi?</div>
+                <div class="col-span-1">HEAT25. So'nggi 12 oy ichida yoush odam o'ziga zarur bo'lgan yordamchi qurilmalar va jixoz sotib olish yoki almashtirish uchun biron bir yordam oldimi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="heat25-1" type="radio" value="1" name="heat25" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1378,7 +1382,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">НЕ 11. Yosh odamga tuzalish va reabilitasiya uchun biror bir xizmatlar kerakmi?</div>
+                <div class="col-span-1">НЕ11. Yosh odamga tuzalish va reabilitasiya uchun biror bir xizmatlar kerakmi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he11-1" type="radio" value="1" name="he11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1394,7 +1398,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    НЕ 12. Yosh odam ga qanday reabilitasiya xizmatlari kerak?
+                    НЕ12. Yosh odam ga qanday reabilitasiya xizmatlari kerak?
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -1430,7 +1434,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">НЕ 13. So'nggi 12 oy ichida yosh odam kerakli tiklanish va reabilitasiya xizmatlarini oldimi?</div>
+                <div class="col-span-1">НЕ13. So'nggi 12 oy ichida yosh odam kerakli tiklanish va reabilitasiya xizmatlarini oldimi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he13-1" type="radio" value="1" name="he13" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1445,7 +1449,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
-                    НЕ 14. So'nggi 12 oy ichida yosh odam quyidagi reabilitasiya xizmatlaridan qaysi birini oldi?
+                    НЕ14. So'nggi 12 oy ichida yosh odam quyidagi reabilitasiya xizmatlaridan qaysi birini oldi?
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -1481,7 +1485,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">НЕ 15. So'nggi 12 oy ichida odam spirtli ichimliklarni suiiste'mol qilish bilan shug'ullanganmi?</div>
+                <div class="col-span-1">НЕ15. So'nggi 12 oy ichida odam spirtli ichimliklarni suiiste'mol qilish bilan shug'ullanganmi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he15-1" type="radio" value="1" name="he15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1499,7 +1503,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">НЕ 16. So'nggi 12 oy ichida odam giyohvand moddalarni iste'mol qilganmi?</div>
+                <div class="col-span-1">НЕ16. So'nggi 12 oy ichida odam giyohvand moddalarni iste'mol qilganmi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he16-1" type="radio" value="1" name="he16" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1517,7 +1521,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">НЕ 17. So'nggi 12 oy ichida, odam o'z-o'ziga zarar etkazganmi?</div>
+                <div class="col-span-1">НЕ17. So'nggi 12 oy ichida, odam o'z-o'ziga zarar etkazganmi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he17-1" type="radio" value="1" name="he17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1535,7 +1539,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">НЕ 18. So'nggi 12 oy ichida odamga jinsiy yo'l bilan yuqadigan kasallik tashxisi qo'yilganmi?</div>
+                <div class="col-span-1">НЕ18. So'nggi 12 oy ichida odamga jinsiy yo'l bilan yuqadigan kasallik tashxisi qo'yilganmi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he18-1" type="radio" value="1" name="he18" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1554,7 +1558,7 @@
 
             <small class="italic uppercase mt-6">FAQAT YOSH AYOLLAR UCHUN</small>
             <div class="grid grid-cols-2 gap-4 items-center mt-2">
-                <div class="col-span-1">НЕ 19. So'nggi 12 oy ichida ayol homilador bo'ldimi yoki tug'dimi?</div>
+                <div class="col-span-1">НЕ19. So'nggi 12 oy ichida ayol homilador bo'ldimi yoki tug'dimi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he19-1" type="radio" value="1" name="he19" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1572,7 +1576,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">НЕ 20. So'nggi 12 oy ichida odam abort qildimi?</div>
+                <div class="col-span-1">НЕ20. So'nggi 12 oy ichida odam abort qildimi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he20-1" type="radio" value="1" name="he20" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
