--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -286,14 +286,14 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI6b. Institution name</div>
+                <div>PI6n. Institution name</div>
                 <div>
                     <input type="text" id="pi6n" name="pi6n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI6c. Type of institution</div>
+                <div>PI6t. Type of institution</div>
                 <div>
                     <select id="pi6t" name="pi6t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -325,7 +325,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI8. Total time spent within the child care system<strong class="underline">(in months)</strong></div>
+                <div>PI8. Total time spent within the child care system <strong class="underline">(in months)</strong></div>
                 <div>
                     <input type="text" id="pi8" name="pi8" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -1125,6 +1125,10 @@
                         <label for="he5_8" class="ms-2 text-sm text-gray-900">Other deficiencies, please specify…</label>
                     </div>
                     <textarea id="he5_8_other" name="he5_8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
+                    <div class="flex items-center">
+                        <input id="he5_9" type="checkbox" value="1" name="he5_9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="he5_9" class="ms-2 text-sm text-gray-900">None of the above</label>
+                    </div>
                 </div>
             </div>
 
