--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -73,28 +73,29 @@
                     </select>
                 </div>
             </div>
+
+            <input type="hidden" id="str3e" name="str3e" />
+
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>STR4. Type of institution</div>
                 <div>
-                    <div>
-                        <select id="str4" name="str4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                            <option value="-9">--</option>
-                            <optgroup label="Childcare institutions:">
-                                <option value="11">11. Mehribonlik house</option>
-                                <option value="12">12. Muruvat house for children with disabilities</option>
-                                <option value="13">13. Family-type home</option>
-                                <option value="14">14. SOS Children's Village</option>
-                            </optgroup>
-                            <optgroup label="Boarding schools:">
-                                <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
-                                <option value="22">22. Type III-IV for blind or visually impaired children</option>
-                                <option value="23">23. Type V for children with severe speech impairments</option>
-                                <option value="24">24. Type VI for children with musculoskeletal disorders</option>
-                                <option value="25">25. Type VII for children with children with slow mental development/mental disorders</option>
-                                <option value="26">26. Type VIII for children with intellectual disabilities</option>
-                            </optgroup>
-                        </select>
-                    </div>
+                    <select id="str4" name="str4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--</option>
+                        <optgroup label="Childcare institutions:">
+                            <option value="12">12. Mehribonlik house</option>
+                            <option value="13">13. Muruvvat house for children with disabilities</option>
+                            <option value="14">14. SOS children’s villages</option>
+                            <option value="15">15. Family-type children’s home</option>
+                        </optgroup>
+                        <optgroup label="Boarding schools:">
+                            <option value="21">21. Type I - boarding schools for deaf children</option>
+                            <option value="22">22. Type II - boarding schools for the hearing-impaired and those who later will lose their hearing</option>
+                            <option value="23">23. Type III - "Noorli Maskan" specialized boarding schools for blind children</option>
+                            <option value="24">24. Type IV - "Noorli Maskan" specialized boarding schools for visually impaired and those who later will lose their vision</option>
+                            <option value="25">25. Type V - boarding schools for children with severe speech disorders</option>
+                            <option value="26">26. Type VI - boarding schools for children with musculoskeletal disorders</option>
+                        </optgroup>
+                    </select>
                 </div>
             </div>
 
@@ -189,7 +190,7 @@
                         <label for="ptr3-1" class="ms-2 text-sm text-gray-900">1. Male</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr3-2" type="radio" value="0" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr3-2" type="radio" value="2" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="ptr3-2" class="ms-2 text-sm text-gray-900">2. Female</label>
                     </div>
                 </div>
@@ -395,6 +396,13 @@
             </div>
 
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>INSON Center that should track down the person.</strong></p>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>OBS. Observations</div>
+                <div class="flex gap-4">
+                    <textarea id="cr10" name="cr10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
+                </div>
+            </div>
 
         </form>
 
