--- a/src/pages/instruments/05a_tqyp_ru.html
+++ b/src/pages/instruments/05a_tqyp_ru.html
@@ -73,28 +73,29 @@
                     </select>
                 </div>
             </div>
+
+            <input type="hidden" id="str3e" name="str3e" />
+
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>STR4. Тип учреждения</div>
                 <div>
-                    <div>
-                        <select id="str4" name="str4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                            <option value="-9">--</option>
-                            <optgroup label="Детские учреждения:">
-                                <option value="11">11. Дом Мехрибонлик</option>
-                                <option value="12">12. Дом-интернат Мурувват для детей с инвалидностью</option>
-                                <option value="13">13. Детский дом семейного типа</option>
-                                <option value="14">14. SOS Детская деревня</option>
-                            </optgroup>
-                            <optgroup label="Школа-интернат:">
-                                <option value="21">21. Тип I-II для глухих или слабослышащих детей.</option>
-                                <option value="22">22. Тип III-IV для слепых или слабовидящих детей.</option>
-                                <option value="23">23. V тип для детей с тяжелыми нарушениями речи.</option>
-                                <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата.</option>
-                                <option value="25">25. Тип VII для детей с детьми с задержкой психического развития/психическими нарушениями.</option>
-                                <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными возможностями.</option>
-                            </optgroup>
-                        </select>
-                    </div>
+                    <select id="str4" name="str4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--</option>
+                        <optgroup label="Детские учреждения:">
+                            <option value="12">12. детские «дома милосердия» - Мехрибонлик</option>
+                            <option value="13">13. Дома-Интернаты Для Детей С Инвалидностью «Мурувват»</option>
+                            <option value="14">14. SOS Детские деревни</option>
+                            <option value="15">15. Детские дома семейного типа</option>
+                        </optgroup>
+                        <optgroup label="Школа-интернат:">
+                            <option value="21">21. I тип - школы-интернаты для глухих детей</option>
+                            <option value="22">22. Тип II - школы-интернаты для слабослышащих и тех, кто впоследствии потеряет слух</option>
+                            <option value="23">23. III тип - специализированные школы-интернаты для слепых детей “Нурли Маскан”</option>
+                            <option value="24">24. IV тип - специализированные школы-интернаты “Нурли Маскан” для слабовидящих и тех, кто впоследствии потеряет зрение</option>
+                            <option value="25">25. V тип - школы-интернаты для детей с тяжелыми нарушениями речи</option>
+                            <option value="26">26. VI тип - школы-интернаты для детей с нарушениями опорно-двигательного аппарата</option>
+                        </optgroup>
+                    </select>
                 </div>
             </div>
 
@@ -189,7 +190,7 @@
                         <label for="ptr3-1" class="ms-2 text-sm text-gray-900">1. Мужской</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr3-2" type="radio" value="0" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr3-2" type="radio" value="2" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="ptr3-2" class="ms-2 text-sm text-gray-900">2. Женский</label>
                     </div>
                 </div>
@@ -259,7 +260,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="ptr7-1" type="radio" value="1" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ptr7-1" class="ms-2 text-sm text-gray-900">1. Вернулся(асть) в свою семью</label>
+                        <label for="ptr7-1" class="ms-2 text-sm text-gray-900">1. Вернулся (ась) в свою семью</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ptr7-2" type="radio" value="2" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -395,6 +396,13 @@
             </div>
 
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>Центр ИНСОН, который должен проводить мониторинг этого человека.</strong></p>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>OBS. Наблюдения</div>
+                <div class="flex gap-4">
+                    <textarea id="cr10" name="cr10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
+                </div>
+            </div>
 
         </form>
 
