--- a/src/pages/instruments/06_dsee_ru.html
+++ b/src/pages/instruments/06_dsee_ru.html
@@ -38,12 +38,8 @@
             <p class="mb-2">Ответственный за выполнение: руководитель учреждения, координатор или уполномоченное ими лицо</p>
             <p class="mb-2">Примерное среднее время выполнения: 40 минут</p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>Q1. Дата заполнения анкеты</div>
-                <div>
-                    <input type="text" id="q1" name="q1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
-                </div>
-            </div>
+            <input type="hidden" id="q1" name="q1" />
+
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
                 <div>Q2. Имя, отчество и фамилия лица, заполнившего анкету</div>
                 <div>
@@ -139,9 +135,9 @@
                         <option value="12">Дом-интернат «Мурувват» для детей с инвалидностью</option>
                         <option value="13">Детский дом семейного типа</option>
                         <option value="14">SOS Детские деревни/семьи</option>
-                        <option value="15">Детский дом (Дом ребенка)</option>
-                        <option value="16">Патронатная семья</option>
-                        <option value="17">Опека/попечительство</option>
+                        <option value="21">Детский дом (Дом ребенка)</option>
+                        <option value="22">Патронатная семья</option>
+                        <option value="23">Опека/попечительство</option>
                     </select>
                 </div>
             </div>
@@ -240,7 +236,7 @@
                     </tr>
                     <tr class="border-b">
                         <td class="p-2">
-                            <p class="block">ТНЕТ. Всего поступлений в это учреждение в течение отчетного года (2023)</p>
+                            <p class="block">TNET. Всего поступлений в это учреждение в течение отчетного года (2023)</p>
                             <small class="italic">Рассчитывается автоматически</small>
                         </td>
                         <td class="p-2 text-center">
@@ -332,7 +328,7 @@
                 </thead>
                 <tbody>
                     <tr class="border-b">
-                        <td class="p-2">NEO1. Поступления путем переводов из Детского дома (Дома ребенка)</td>
+                        <td class="p-2">NEO1. Поступления путем переводов из Дом ребенка</td>
                         <td class="p-2 text-center">
                             <input type="text" id="neo1_b" name="neo1_b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 p-2.5 w-24" />
                         </td>
@@ -356,7 +352,7 @@
                         </td>
                     </tr>
                     <tr class="border-b">
-                        <td class="p-2">NEO3. Поступление путем переводов из дома-интерната «Муруват» для детей с инвалидностью</td>
+                        <td class="p-2">NEO3. Поступление путем переводов из дома-интерната «Мурувват» для детей с инвалидностью</td>
                         <td class="p-2 text-center">
                             <input type="text" id="neo3_b" name="neo3_b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 p-2.5 w-24" />
                         </td>
@@ -825,6 +821,11 @@
                     </tr>
                 </tbody>
             </table>
+
+            <div class="grid mt-10">
+                <label for="obs">OBS. Наблюдения</label>
+                <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
+            </div>
 
         </form>
 
