--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -623,13 +623,14 @@
                             <input type="text" id="fc4_c1c" name="fc4_c1c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                         </td>
                         <td class="p-2">
-                            <select id="fc4_c1d" name="fc4_c1d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                            <select multiple id="fc4_c1d" name="fc4_c1d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="0">None</option>
-                                <option value="1">1. From their family</option>
-                                <option value="2">2. From a childcare institution</option>
-                                <option value="3">3. From another family-type home</option>
-                                <option value="4">4. From a patronat family</option>
-                                <option value="5">5. Other situation, please specify</option>
+                                <option value="1">Disability</option>
+                                <option value="2">Special education needs</option>
+                                <option value="3">HIV/AIDS </option>
+                                <option value="4">Behavioral disorders</option>
+                                <option value="5">In conflict with law</option>
+                                <option value="6">Other</option>
                             </select>
                         </td>
                         <td class="p-2">
