inson add family type - WIP

--- a/src/pages/regional/02_add_inson_service.html
+++ b/src/pages/regional/02_add_inson_service.html
@@ -69,6 +69,7 @@
                     <span class="t_mahala">Mahala</span>
                 </label>
                 <select id="mahala" name="mahala" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5  w-1/2">
+                    <option value="">---</option>
                 </select>
             </div>
             <div class="mt-4 flex gap-4 items-center">
