--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -1638,7 +1638,7 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">a. Gender</th>
-                        <th class="p-2">b. Age<small class="my-2 block italic text-red-500">FILL IN AGE IN COMPLETED YEARS</small></th>
+                        <th class="p-2">b. Age<br><small class="my-2 block italic text-red-500">FILL IN AGE IN COMPLETED YEARS</small></th>
                         <th class="w-52 p-2">c. Has a disability?</th>
                         <th class="p-2">d. Reason for leaving</th>
                     </tr>
