--- a/src/pages/instruments/07_ftch_ru.html
+++ b/src/pages/instruments/07_ftch_ru.html
@@ -1638,7 +1638,7 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">а. Пол</th>
-                        <th class="p-2">b. Возраст<small class="my-2 block italic text-red-500">УКАЖИТЕ ВОЗРАСТ, ПОЛНЫХ ЛЕТ</small></th>
+                        <th class="p-2">b. Возраст<br><small class="my-2 block italic text-red-500">УКАЖИТЕ ВОЗРАСТ, ПОЛНЫХ ЛЕТ</small></th>
                         <th class="w-52 p-2">c. Имеется ли инвалидность?</th>
                         <th class="p-2">d. Причина ухода</th>
                     </tr>
