--- a/src/pages/instruments/07_ftch_uz.html
+++ b/src/pages/instruments/07_ftch_uz.html
@@ -1638,7 +1638,7 @@
                     <tr class="border-b">
                         <th class="p-2"></th>
                         <th class="w-40 p-2">a. Jinsi</th>
-                        <th class="p-2">b. Yoshi<small class="my-2 block italic text-red-500">TO'LIQ YOSHNI KO'RSATING</small></th>
+                        <th class="p-2">b. Yoshi<br><small class="my-2 block italic text-red-500">TO'LIQ YOSHNI KO'RSATING</small></th>
                         <th class="w-52 p-2">c. Nogironligi bormi?</th>
                         <th class="p-2">d. Ketish sababi</th>
                     </tr>
